Changes for 3.4.1rc1

New features:
A.F....... [ZBX-1357] updated Czech, English (United States), French, Italian, Japanese, Korean, Portuguese (Brazil), Russian, Ukrainian translations; thanks to Zabbix translators (zalex_ua)

Bug fixes:
.......PS. [ZBX-12574] fixed crash when linking templates with web scenarios during auto registration (vso)
..F....... [ZBX-12433] fixed XML import of web scenarios (vjaceslavs)
.......PS. [ZBX-12524] fixed DB upgrade patch for map shapes on DB2 (vjaceslavs)
.......PS. [ZBXNEXT-3006] fixed multiple issues with dependent items (vjaceslavs)
..F....... [ZBX-12439] fixed macro name field length in host configuration form (gcalenko)

--------------------------------------------------------------------------------
Changes for 3.4.0

3.4.0rc2 was released as 3.4.0 without any changes

--------------------------------------------------------------------------------
Changes for 3.4.0rc2

Bug fixes:
A.F....... [ZBXNEXT-3883] fixed dependent trigger with dependent item deletion; dependent item recursion message; dependent item massupdate form master item being reset on error (gcalenko)
..F....... [ZBX-12506] fixed wrong top position of the period selection box on the graphs after closing/opening filter (vmurzins)
.......PS. [ZBX-12486] fixed item removal from poller queue during configuration cache synchronization (wiper)
..F....... [ZBXNEXT-3890] fixed extra graph loading (vmurzins)
........S. [ZBXNEXT-3926] fixed macros {EVENT.STATUS} and {EVENT.VALUE} to return correct value depending on the state of a problem (viktors)

--------------------------------------------------------------------------------
Changes for 3.4.0rc1

New features:
A......... [ZBXNEXT-2102] improved performance of event.get() and problem.get() methods with "selectTags" option (Sasha)
....I....T [ZBXNEXT-3920] added Templates for some of the most common applications and devices (vzhuravlev, vso)