@@ -101,6 +101,10 @@ class CClock extends CDiv {
 						'clock_id' => $this->getId()
 					]).
 				');'.
+				// Hack for Safari to manually accept parent container height in pixels when clock widget is loaded.
+				'if (SF) {'.
+					'$("#'.$this->getId().'").height($("#'.$this->getId().'").parent().height());'.
+				'}'.
 			'});'
 			: '';
 	}
