@@ -4575,6 +4575,9 @@ tr.cursor-move {
 	width: 100%;
 	max-height: 100%;
 	max-width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 .navtree {
